--- a/src/web/index.html
+++ b/src/web/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0&icon_names=upload" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0&icon_names=plane_contrails,upload" />
         <style>
             :root {
                 --red-glow: #ff005e;
@@ -25,9 +25,13 @@
                 font-weight: 400;
                 font-style: normal;
             }
-            .mode-uploaded .initial-only,
-            .mode-initial .uploaded-only {
+            .in-initial, .in-uploaded, .in-uploading {
                 display: none;
+            }
+            .mode-initial .in-initial,
+            .mode-uploaded .in-uploaded,
+            .mode-uploading .in-uploading {
+                display: revert;
             }
             label {
                 display: flex;
@@ -48,7 +52,7 @@
                     0 0 20px var(--red-glow),
                     0 0 40px var(--red-glow),
                     0 0 80px var(--red-glow);
-                animation: glow 1.5s infinite alternate;
+                animation: glowing-text 1.5s infinite alternate;
             }
             .button {
                 display: flex;
@@ -96,7 +100,7 @@
                 filter: blur(50px);
                 width: calc(100% + 4px);
                 height: calc(100% + 4px);
-                /* animation: glowing 20s linear infinite; */
+                /* animation: glowing-button 20s linear infinite; */
                 border-radius: 999px;
             }
 
@@ -116,7 +120,7 @@
                 display: none;
             }
 
-            @keyframes glow {
+            @keyframes glowing-text {
                 0% {
                     text-shadow:
                         0 0 5px var(--red-glow),
@@ -135,7 +139,7 @@
                 }
             }
 
-            @keyframes glowing {
+            @keyframes glowing-button {
                 0% { background-position: 0 0; }
                 50% { background-position: 400% 0; }
                 100% { background-position: 0 0; }
@@ -152,22 +156,29 @@
         <form id="form" method="POST" enctype="multipart/form-data">
             <label for="imageInput">
                 <h1>
-                    <span class="initial-only">Kestel-Con<br>Slideshow!</span>
-                    <span class="uploaded-only">Thank you!</span>
+                    <span class="in-initial in-uploading">Kestel-Con<br>Slideshow!</span>
+                    <span class="in-uploaded">Thank you!</span>
                 </h1>
                 <div class="button">
-                    <span class="initial-only">Upload<br>Photo</span>
-                    <span class="uploaded-only">Upload<br>Another</span>
-                    <span class="material-symbols-outlined">upload</span>
+                    <span class="in-initial">Upload<br>Photo</span>
+                    <span class="in-uploaded">Upload<br>Another</span>
+                    <span class="in-uploading">Uploading</span>
+                    <span class="material-symbols-outlined in-initial in-uploaded">upload</span>
+                    <span class="material-symbols-outlined in-uploading">plane_contrails</span>
                 </div>
             </label>
-            <input type="file" accept="image/*" name="image" id="imageInput" multiple>
+            <input type="file" accept="image/jpeg" name="image" id="imageInput">
         </form>
         <script>
             // Auto-submit form.
             const imageInput = document.getElementById("imageInput");
             const form = document.getElementById("form");
-            imageInput.addEventListener("change", () => form.submit());
+            imageInput.addEventListener("change", () => {
+                form.submit();
+                document.body.classList.remove("mode-uploaded", "mode-initial");
+                document.body.classList.add("mode-uploading");
+                imageInput.disabled = true;
+            });
         </script>
     </body>
 </html>
